fix: изменен маршрут получения фида уведомлений юзера, убраны параметры пути
