# docs/swagger.yaml
@@ -963,17 +963,12 @@ paths:
       summary: Mark notification as read
       tags:
       - notification
-  /notification/feed/{user_id}:
+  /notification/feed:
     get:
       consumes:
       - application/json
       description: Get paginated list of notifications for a user
       parameters:
-      - description: User ID
-        in: path
-        name: user_id
-        required: true
-        type: integer
       - description: 'Page number (default: 1)'
         in: query
         name: page
@@ -991,12 +986,6 @@ paths:
             $ref: '#/definitions/notification_handler.GetUserNotificationFeedSwaggerResponse'
         "400":
           description: Bad request
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "403":
-          description: Forbidden
           schema:
             additionalProperties:
               type: string
